--- a/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepHead.xib
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepHead.xib
@@ -12,24 +12,33 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="xvv-5A-1MO" customClass="YQStepHeadView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="397" height="97"/>
+            <rect key="frame" x="0.0" y="0.0" width="397" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="今日排行版" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjn-Q0-Qcw">
-                    <rect key="frame" x="31" y="20" width="87" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日排行版" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjn-Q0-Qcw">
+                    <rect key="frame" x="30" y="5" width="87" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zZX-Qp-5dW">
-                    <rect key="frame" x="98" y="70" width="240" height="15"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zZX-Qp-5dW">
+                    <rect key="frame" x="10" y="36" width="377" height="2"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1.5" id="83a-Gd-XCZ"/>
+                    </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="zZX-Qp-5dW" firstAttribute="leading" secondItem="xvv-5A-1MO" secondAttribute="leading" constant="10" id="A3Z-ch-Udl"/>
+                <constraint firstItem="Gjn-Q0-Qcw" firstAttribute="top" secondItem="xvv-5A-1MO" secondAttribute="top" constant="5" id="GmZ-yw-l5E"/>
+                <constraint firstAttribute="trailing" secondItem="zZX-Qp-5dW" secondAttribute="trailing" constant="10" id="V6W-es-ZDw"/>
+                <constraint firstItem="Gjn-Q0-Qcw" firstAttribute="leading" secondItem="xvv-5A-1MO" secondAttribute="leading" constant="30" id="aGf-Qd-h7R"/>
+                <constraint firstItem="zZX-Qp-5dW" firstAttribute="top" secondItem="Gjn-Q0-Qcw" secondAttribute="bottom" constant="10" id="udh-du-KV6"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-17.5" y="20.5"/>
+            <point key="canvasLocation" x="-64.5" y="-57"/>
         </view>
     </objects>
 </document>
