--- a/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
@@ -24,9 +24,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CUa-LO-2gn">
                                 <rect key="frame" x="0.0" y="20" width="375" height="64"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zb3-rw-9e0">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zb3-rw-9e0">
                                         <rect key="frame" x="0.0" y="0.0" width="125" height="64"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="集团">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -37,9 +36,8 @@
                                             <action selector="selectButtonClicked:" destination="n1R-XZ-fpy" eventType="touchUpInside" id="U63-zN-Y8s"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Q5-cb-T4Y">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Q5-cb-T4Y">
                                         <rect key="frame" x="125" y="0.0" width="125" height="64"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="项目">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -50,9 +48,8 @@
                                             <action selector="selectButtonClicked:" destination="n1R-XZ-fpy" eventType="touchUpInside" id="dtd-L2-9Jc"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nU-NH-5Sl">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nU-NH-5Sl">
                                         <rect key="frame" x="250" y="0.0" width="125" height="64"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="部门">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -84,6 +81,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2aY-w3-0Hh">
                                 <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="n1R-XZ-fpy" id="UZJ-Mo-cLo"/>
+                                    <outlet property="delegate" destination="n1R-XZ-fpy" id="aS4-UY-PNe"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
