--- a/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CUa-LO-2gn">
-                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <rect key="frame" x="0.0" y="34" width="375" height="54"/>
                                 <subviews>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zb3-rw-9e0">
-                                        <rect key="frame" x="0.0" y="0.0" width="125" height="64"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="54"/>
                                         <state key="normal" title="集团">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -37,7 +37,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Q5-cb-T4Y">
-                                        <rect key="frame" x="125" y="0.0" width="125" height="64"/>
+                                        <rect key="frame" x="125" y="0.0" width="125" height="54"/>
                                         <state key="normal" title="项目">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -49,7 +49,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nU-NH-5Sl">
-                                        <rect key="frame" x="250" y="0.0" width="125" height="64"/>
+                                        <rect key="frame" x="250" y="0.0" width="125" height="54"/>
                                         <state key="normal" title="部门">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -61,12 +61,11 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="2nU-NH-5Sl" firstAttribute="width" secondItem="Zb3-rw-9e0" secondAttribute="width" id="4xs-t7-M83"/>
                                     <constraint firstItem="2nU-NH-5Sl" firstAttribute="top" secondItem="CUa-LO-2gn" secondAttribute="top" id="E1l-V3-bbf"/>
                                     <constraint firstItem="2nU-NH-5Sl" firstAttribute="leading" secondItem="9Q5-cb-T4Y" secondAttribute="trailing" id="Gz4-wI-BfQ"/>
-                                    <constraint firstAttribute="height" constant="64" id="NbB-vU-93V"/>
+                                    <constraint firstAttribute="height" constant="54" id="NbB-vU-93V"/>
                                     <constraint firstAttribute="bottom" secondItem="Zb3-rw-9e0" secondAttribute="bottom" id="Qeg-kD-7B2"/>
                                     <constraint firstItem="Zb3-rw-9e0" firstAttribute="top" secondItem="CUa-LO-2gn" secondAttribute="top" id="bDK-Ke-GOM"/>
                                     <constraint firstAttribute="bottom" secondItem="9Q5-cb-T4Y" secondAttribute="bottom" id="bwo-6f-dU0"/>
@@ -79,22 +78,41 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2aY-w3-0Hh">
-                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="579"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="n1R-XZ-fpy" id="UZJ-Mo-cLo"/>
                                     <outlet property="delegate" destination="n1R-XZ-fpy" id="aS4-UY-PNe"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HW1-Ej-ffw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="34"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昨日排行榜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Axm-8Q-I5Y">
+                                        <rect key="frame" x="136.5" y="5.5" width="102" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Axm-8Q-I5Y" firstAttribute="centerX" secondItem="HW1-Ej-ffw" secondAttribute="centerX" id="IIJ-3r-6ou"/>
+                                    <constraint firstItem="Axm-8Q-I5Y" firstAttribute="centerY" secondItem="HW1-Ej-ffw" secondAttribute="centerY" id="xZp-jS-wOe"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HW1-Ej-ffw" secondAttribute="trailing" id="BYq-RY-d2O"/>
                             <constraint firstItem="Hsr-TI-TGQ" firstAttribute="top" secondItem="2aY-w3-0Hh" secondAttribute="bottom" id="Eqv-KK-E7W"/>
                             <constraint firstItem="2aY-w3-0Hh" firstAttribute="leading" secondItem="w9K-e2-7a6" secondAttribute="leading" id="Lag-4T-ZuA"/>
-                            <constraint firstItem="CUa-LO-2gn" firstAttribute="top" secondItem="cH9-RE-IiN" secondAttribute="bottom" id="Unv-4e-9sV"/>
+                            <constraint firstItem="CUa-LO-2gn" firstAttribute="top" secondItem="HW1-Ej-ffw" secondAttribute="bottom" id="Xw9-Fl-LVH"/>
                             <constraint firstAttribute="trailing" secondItem="2aY-w3-0Hh" secondAttribute="trailing" id="gae-a2-LGM"/>
+                            <constraint firstItem="HW1-Ej-ffw" firstAttribute="leading" secondItem="w9K-e2-7a6" secondAttribute="leading" id="ie3-aW-4Aj"/>
                             <constraint firstAttribute="trailing" secondItem="CUa-LO-2gn" secondAttribute="trailing" id="iu6-s8-yaB"/>
+                            <constraint firstItem="HW1-Ej-ffw" firstAttribute="top" secondItem="w9K-e2-7a6" secondAttribute="top" id="o7S-0I-vnj"/>
                             <constraint firstItem="CUa-LO-2gn" firstAttribute="leading" secondItem="w9K-e2-7a6" secondAttribute="leading" id="qqs-xn-u7Q"/>
+                            <constraint firstItem="CUa-LO-2gn" firstAttribute="top" secondItem="cH9-RE-IiN" secondAttribute="bottom" constant="14" id="uyt-b0-DwT"/>
                             <constraint firstItem="2aY-w3-0Hh" firstAttribute="top" secondItem="CUa-LO-2gn" secondAttribute="bottom" id="xBt-9I-3AM"/>
                         </constraints>
                     </view>
@@ -108,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUw-I0-xNR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-318" y="81"/>
+            <point key="canvasLocation" x="-319.19999999999999" y="80.50974512743629"/>
         </scene>
     </scenes>
 </document>
