--- a/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQStepScreen.storyboard
@@ -61,6 +61,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="2nU-NH-5Sl" firstAttribute="width" secondItem="Zb3-rw-9e0" secondAttribute="width" id="4xs-t7-M83"/>
                                     <constraint firstItem="2nU-NH-5Sl" firstAttribute="top" secondItem="CUa-LO-2gn" secondAttribute="top" id="E1l-V3-bbf"/>
