--- a/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepStatistics.xib
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepStatistics.xib
@@ -18,12 +18,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="421" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9g-kf-8jt">
-                        <rect key="frame" x="10" y="34" width="20" height="21.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9g-kf-8jt">
+                        <rect key="frame" x="10" y="35" width="30" height="19.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="UpP-Q0-LJp"/>
+                            <constraint firstAttribute="width" constant="30" id="UpP-Q0-LJp"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
